# condor-reverse-engineering-tools

./: README.md
apps/: xy_stage.py
drivers/linux/: 99-condor-embedded.rules
emfi-tools/: examples  pyproject.toml
emfi-tools/host-src/emfi_tools.egg-info/: PKG-INFO  SOURCES.txt
emfi-tools/host-src/examples/: single_shot_emfi_target.py
emfi-tools/host-src/shared/: arduino_mega2560_target.py  cnc_grbl.py  naeusb.py  sram_as6c3216A_emfi_target.py  stm32h7_swd_target.py
side-channel-tools/: side-channel-tools.toml
